--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
 
 
 	<dependencies>
+
+		<!-- web start -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!-- web end -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
