--- a/eva-web-parent/pom.xml
+++ b/eva-web-parent/pom.xml
@@ -36,10 +36,12 @@
 		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
-			<version>1.9.22</version>
+			<version>1.9.22</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
 
 		<!-- web end -->
+
+
 
 	</dependencies>
 	<build>
